feat: integrate typeorm

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,13 +25,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "nestjs-pino": "^4.4.1",
     "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.27",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
