--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@next/eslint-plugin-next": "^15.4.5",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.35.0",
