--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,8 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "dev": "nest start --watch",
+    "start": "node -r tsconfig-paths/register dist/main.js",
+    "dev": "ts-node -r tsconfig-paths/register src/main.ts --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,12 +24,17 @@
     "@nestjs/common": "^10.4.16",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^9.0.5",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^10.4.20",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "compression": "^1.8.1",
+    "dotenv": "^17.2.3",
+    "dotenv-expand": "^12.0.3",
     "helmet": "^8.1.0",
     "nestjs-pino": "^4.4.1",
+    "pg": "^8.16.3",
     "pino-pretty": "^13.1.2",
+    "pnpm": "^10.20.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -58,8 +63,8 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
   },
   "jest": {
