--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node -r tsconfig-paths/register dist/main.js",
     "dev": "ts-node -r tsconfig-paths/register src/main.ts --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "node --inspect-brk -r tsconfig-paths/register dist/main.js --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
