--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node -r tsconfig-paths/register dist/main.js",
-    "dev": "ts-node -r tsconfig-paths/register src/main.ts --watch",
+    "dev": "nest start --watch",
     "start:debug": "node --inspect-brk -r tsconfig-paths/register dist/main.js --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/common": "^11.1.8",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.8",
@@ -31,6 +32,7 @@
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "helmet": "^8.1.0",
+    "ioredis": "^5.8.2",
     "nestjs-pino": "^4.4.1",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.2",
