--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,8 +25,10 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.8",
     "@nestjs/platform-express": "^11.1.8",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@scalar/nestjs-api-reference": "^1.0.6",
     "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
