--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,8 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@scalar/nestjs-api-reference": "^1.0.6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
@@ -51,6 +53,8 @@
     "@types/express": "^5.0.5",
     "@types/jest": "30.0.0",
     "@types/node": "^24.10.0",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
