--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -56,6 +56,8 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.8",
+    "@swc/cli": "^0.7.9",
+    "@swc/core": "^1.3.78",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.5",
     "@types/jest": "30.0.0",
