--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@commitlint/format": "^20.0.0",
     "@commitlint/types": "^20.0.0",
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "commitizen": "^4.3.1",
+    "conventional-changelog-atom": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "lefthook": "^2.0.2",
     "prettier": "^3.6.2",
@@ -33,9 +35,5 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "@commitlint/format": "^20.0.0",
-    "conventional-changelog-atom": "^5.0.0"
   }
 }
