--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "lefthook": "^2.0.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tsx": "^4.20.6",
     "turbo": "^2.6.0",
     "typescript": "^5.9.3"
