--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,11 +7,15 @@
     "./base": "./base.js",
     "./next-js": "./next.js",
     "./nest-js": "./nest.js",
+    "./react-js": "./react.js",
     "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^2.3.1",
     "@eslint/js": "^9.36.0",
     "@next/eslint-plugin-next": "^15.4.5",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@tanstack/eslint-plugin-router": "^1.133.19",
     "@types/eslint-config-prettier": "^6.11.3",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
