--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "biome lint ."
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.1",
@@ -15,9 +15,7 @@
   "devDependencies": {
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
-    "eslint": "^9.35.0",
     "typescript": "^5.9.2"
   },
   "exports": {
