--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!**/src/**/globals.css", "!**/**.d.ts"]
+    "includes": ["**", "!**/src/**/globals.css", "!**/*.d.ts"]
   },
   "formatter": {
     "attributePosition": "auto",
