fix: neats comment for packages/schema

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "private": true,
+  "files": ["dist"],
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "dev": "tsc --watch",
@@ -18,7 +19,7 @@
   "exports": {
     ".": {
       "default": "./dist/index.js",
-      "types": "./dist/index.d.js"
+      "types": "./dist/index.d.ts"
     }
   }
 }
