--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -5,10 +5,9 @@
     "outDir": "dist",
     "declaration": true,
     "paths": {
-      "@workspace/schema/*": ["./src/*"],
-      "@workspace/schema/utils/*": ["./src/utils/*"]
+      "@workspace/schema/*": ["./src/*"]
     }
   },
-  "include": ["."],
+  "include": ["./src"],
   "exclude": ["node_modules", "dist"]
 }
