feat(axios): init axios and clean prettier config

--- a/packages/axios/tsconfig.json
+++ b/packages/axios/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "@workspace/typescript-config/react-library.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "outDir": "./dist",
     "paths": {
-      "@workspace/lib/*": ["./src/*"]
+      "@workspace/axios/*": ["./src/*"]
     }
   },
   "include": ["."],
