--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "@workspace/lib",
+  "name": "@workspace/axios",
   "version": "0.0.0",
   "type": "module",
   "private": true,
   "scripts": {
+    "build": "tsc --project tsconfig.json",
+    "dev": "tsc --watch",
     "lint": "biome lint ."
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.12.2",
-    "react-dom": "^19.1.1",
-    "zod": "^3.25.76"
+    "qs": "^6.14.0",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@workspace/typescript-config": "workspace:*",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   },
   "exports": {
     "./*": "./src/*/index.ts"
