--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "dev": "tsc --watch",
-    "lint": "biome lint ."
+    "lint": "biome lint .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.87.1",
@@ -18,8 +21,12 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@vitest/ui": "^4.0.8",
     "@workspace/typescript-config": "workspace:*",
-    "typescript": "^5.9.3"
+    "@workspace/schema": "workspace:*",
+    "axios-mock-adapter": "^2.1.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.8"
   },
   "exports": {
     "./*": "./src/*/index.ts"
