--- a/packages/axios/package.json
+++ b/packages/axios/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.12.2",
+    "nanoid": "^5.1.6",
     "qs": "^6.14.0",
     "react-dom": "^19.1.1"
   },
@@ -22,8 +23,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitest/ui": "^4.0.8",
-    "@workspace/typescript-config": "workspace:*",
     "@workspace/schema": "workspace:*",
+    "@workspace/typescript-config": "workspace:*",
     "axios-mock-adapter": "^2.1.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
