--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -28,11 +28,10 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.553.0",
-    "nitro": "npm:nitro-nightly@latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "7.2.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
