feat: integrate nestjs fastify

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,26 +21,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/compress": "^8.3.0",
+    "@fastify/csrf-protection": "^7.1.0",
+    "@fastify/helmet": "^13.0.2",
+    "@fastify/static": "^8.3.0",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/common": "^11.1.8",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.8",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.1.8",
+    "@nestjs/platform-fastify": "^11.1.8",
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
-    "@scalar/nestjs-api-reference": "^1.0.7",
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "compression": "^1.8.1",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
-    "helmet": "^8.1.0",
+    "fastify": "^5.6.1",
     "ioredis": "^5.8.2",
+    "nanoid": "^5.1.6",
     "nestjs-pino": "^4.4.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -57,9 +60,7 @@
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.8",
     "@swc/cli": "^0.7.9",
-    "@swc/core": "^1.15.0",
-    "@types/compression": "^1.8.1",
-    "@types/express": "^5.0.5",
+    "@swc/core": "^1.15.1",
     "@types/jest": "30.0.0",
     "@types/node": "^24.10.0",
     "@types/passport-jwt": "^4.0.1",
@@ -78,13 +79,19 @@
     "typescript": "^5.9.3"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
