--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,6 +24,7 @@
     "@fastify/compress": "^8.3.0",
     "@fastify/csrf-protection": "^7.1.0",
     "@fastify/helmet": "^13.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/static": "^8.3.0",
     "@nest-lab/throttler-storage-redis": "^1.1.0",
     "@nestjs/common": "^11.1.8",
