fix(swc): enable swc by removing nestjs/plugin & refactor logger

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@workspace/typescript-config/nestjs.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
