--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,15 +9,15 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node -r tsconfig-paths/register dist/main.js",
+    "start": "bun dist/main.js",
     "dev": "nest start --watch",
-    "start:debug": "node --inspect-brk -r tsconfig-paths/register dist/main.js --watch",
+    "start:debug": "node --inspect-brk dist/main.js --watch",
     "start:prod": "node dist/main",
     "lint": "biome lint .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:debug": "node --inspect-brk -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
@@ -49,9 +49,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
-    "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
-    "rimraf": "^6.1.0",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.27",
     "typeorm-naming-strategies": "^4.1.0"
@@ -70,29 +68,24 @@
     "@types/supertest": "^6.0.3",
     "@workspace/typescript-config": "workspace:*",
     "jest": "30.2.0",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
+    "rimraf": "^6.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "29.4.5",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
+    "moduleFileExtensions": ["js", "json", "ts"],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
+    "collectCoverageFrom": ["**/*.(t|j)s"],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
