--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,8 +2,6 @@
   "name": "@workspace/ui",
   "private": true,
   "scripts": {
-    "build": "tsc --project tsconfig.json",
-    "dev": "tsc --watch",
     "lint": "biome lint ."
   },
   "type": "module",
@@ -36,7 +34,6 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@space-man/react-theme-animation": "^1.1.1",
     "@tanstack/react-router": "^1.134.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -60,7 +57,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@turbo/gen": "^2.6.0",
-    "@types/node": "^24.10.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@workspace/typescript-config": "workspace:*",
@@ -68,6 +65,7 @@
     "typescript": "^5.9.3"
   },
   "exports": {
+    "./providers/*": "./src/providers/*.tsx",
     "./components/*": "./src/components/*.tsx",
     "./globals.css": "./src/styles/globals.css",
     "./hooks/*": "./src/hooks/*.ts",
