--- a/packages/cookie/tsconfig.json
+++ b/packages/cookie/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "ES2024",
     "module": "ESNext",
     "lib": ["ES2024", "DOM"],
+    "declaration": true,
+    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
@@ -12,6 +14,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.ts", "./src/global.d.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "tests"]
 }
