--- a/packages/cookie/package.json
+++ b/packages/cookie/package.json
@@ -22,7 +22,9 @@
       "require": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "cookie",
     "cookies",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@vitest/coverage-v8": "4.0.8",
+    "biome": "^0.3.3",
     "jsdom": "^27.2.0",
     "tsdown": "^0.16.4",
     "typescript": "^5.9.3",
