feat(schema): improve profile schema

--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -4,12 +4,9 @@
   "type": "module",
   "private": true,
   "files": ["dist"],
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsdown src/**.ts",
-    "dev": "tsdown src/**.ts --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "lint": "biome lint ."
   },
   "dependencies": {
