--- a/packages/cookie/package.json
+++ b/packages/cookie/package.json
@@ -11,8 +11,8 @@
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "build": "tsdown src/index.ts",
-    "dev": "tsdown src/index.ts --watch",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "lint": "biome lint ."
   },
   "exports": {
@@ -22,9 +22,7 @@
       "require": "./dist/index.js"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "keywords": [
     "cookie",
     "cookies",
