--- a/packages/cookie/tsconfig.json
+++ b/packages/cookie/tsconfig.json
@@ -20,6 +20,6 @@
     "strictNullChecks": true,
     "removeComments": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "types/**.d.ts"],
   "exclude": ["node_modules", "dist", "tests"]
 }
