--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "private": true,
   "files": ["dist"],
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
@@ -13,20 +16,14 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@workspace/typescript-config": "workspace:*",
     "tsdown": "^0.16.4",
     "typescript": "^5.9.3"
   },
   "exports": {
-    "./auth": {
-      "types": "./dist/auth.schema.d.ts",
-      "import": "./dist/auth.schema.mjs",
-      "require": "./dist/auth.schema.js"
-    },
-    "./user": {
-      "types": "./dist/user.schema.d.ts",
-      "import": "./dist/user.schema.mjs",
-      "require": "./dist/user.schema.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   }
 }
