--- a/packages/axios/tsconfig.json
+++ b/packages/axios/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "incremental": false,
     "isolatedModules": true,
-    "lib": ["ES2024"],
+    "lib": ["ES2024", "DOM"],
     "target": "ES2024",
     "module": "ESNext",
     "moduleDetection": "force",
