--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@t3-oss/env-core": "^0.13.8",
-    "@tanstack/react-query": "^5.90.7",
-    "@tanstack/react-router": "^1.134.18",
-    "@tanstack/react-router-ssr-query": "^1.134.18",
-    "@tanstack/react-start": "^1.134.18",
-    "@vitejs/plugin-react": "^5.1.0",
+    "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-router": "^1.136.1",
+    "@tanstack/react-router-ssr-query": "^1.136.1",
+    "@tanstack/react-start": "^1.136.1",
+    "@vitejs/plugin-react": "^5.1.1",
     "@workspace/axios": "workspace:*",
     "@workspace/schema": "workspace:*",
     "@workspace/ui": "workspace:*",
@@ -39,11 +40,11 @@
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/react-devtools": "^0.8.1",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router-devtools": "^1.134.18",
-    "@tanstack/router-plugin": "^1.134.18",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@tanstack/react-router-devtools": "^1.136.1",
+    "@tanstack/router-plugin": "^1.136.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "@workspace/typescript-config": "workspace:*",
     "babel-plugin-react-compiler": "^1.0.0",
     "jiti": "^2.6.1",
