--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -1,18 +1,33 @@
 {
-  "extends": "@workspace/typescript-config/reactjs.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "baseUrl": ".",
+    "declaration": true,
+    "outDir": "./dist",
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "incremental": false,
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ES2024"],
+    "target": "ES2024",
+    "moduleDetection": "force",
+    "moduleResolution": "Bundler",
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "noUncheckedIndexedAccess": true,
+    "strictNullChecks": true,
+    "removeComments": true,
+    "noEmit": true,
+    "strict": true,
+    "allowJs": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "@/*": ["./src/*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"],
       "@workspace/schema/*": ["../../packages/schema/*"]
-    },
-    "plugins": [
-      {
-        "name": "react"
-      }
-    ]
+    }
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
