feat(admin): authentication & redirection

--- a/apps/admin/biome.json
+++ b/apps/admin/biome.json
@@ -6,6 +6,9 @@
     "rules": {
       "style": {
         "useComponentExportOnlyModules": "off"
+      },
+      "suspicious": {
+        "noAssignInExpressions": "off"
       }
     }
   },
