--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -7,8 +7,8 @@
     "dev": "vite dev --port 3000",
     "build": "vite build",
     "start": "node .output/server/index.mjs",
-    "lint": "eslint .",
-    "format": "prettier --write .",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
     "check-types": "tsc --noEmit",
     "check": "pnpm format && pnpm lint && pnpm check-types",
     "deps": "pnpm dlx taze@latest -Ilw",
