--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev2": "vite dev --port 3000",
     "build": "vite build",
     "start": "node .output/server/index.mjs",
     "lint": "biome lint .",
