feat: add sidebar provider

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -66,6 +66,7 @@
   },
   "exports": {
     "./providers/*": "./src/providers/*.tsx",
+    "./types/*": "./src/types/*.ts",
     "./components/*": "./src/components/*.tsx",
     "./globals.css": "./src/styles/globals.css",
     "./hooks/*": "./src/hooks/*.ts",
