--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -2,6 +2,7 @@
   "$schema": "https://ui.shadcn.com/schema.json",
   "aliases": {
     "components": "@workspace/ui/components",
+    "types": "@workspace/ui/types",
     "hooks": "@workspace/ui/hooks",
     "lib": "@workspace/ui/lib",
     "ui": "@workspace/ui/components",
