feat: add based-layout

--- a/apps/admin/biome.json
+++ b/apps/admin/biome.json
@@ -9,6 +9,13 @@
       },
       "suspicious": {
         "noAssignInExpressions": "off"
+      },
+      "a11y": {
+        "noStaticElementInteractions": "off",
+        "useKeyWithClickEvents": "off"
+      },
+      "complexity": {
+        "useOptionalChain": "off"
       }
     }
   },
