--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -28,6 +28,7 @@
     "@workspace/ui": "workspace:*",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
