feat: intialize base entities, seed master data

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed:run": "typeorm-extension seed:run -d ./src/modules/database/typeorm/data-source.ts",
+    "seed:create": "typeorm-extension seed:create"
   },
   "dependencies": {
     "@fastify/compress": "^8.3.0",
@@ -52,6 +54,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.27",
+    "typeorm-extension": "^3.7.1",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
